--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -226,7 +226,7 @@ It synchronizes data across devices and supports custom data formats.
 We plan to conduct experiments for each configuration design and to compare the configurations. So far, we have completed a preliminary user study on our mirrored face-to-face configuration.
 The user study was conducted with 8 participants (F=4) between the ages of 22 and 26 (M=23.71, SD=1.50), recruited via email and word-of-mouth.
 %, including undergraduate and graduate computer science and art students from New York University studying either Computer Science or Art and Design. 
-The participants were required to have taken a linear algebra class and to have had prior experience with VR/MR. First, we introduced Chalktalk to participants who were unfamiliar with it to reduce the novelty effect. Afterwards, we gave a presentation on matrix transformations (a concept in the computer graphics curriculum, see figure~\ref{fig:expMatrix}) using our system in the mirrored face-to-face configuration. For each session, we have one presenter and two audience, all of whom are placed physically remote. The presentation were repeated 4 times for 8 participants at all. 
+The participants were required to have taken a linear algebra class and to have experience with VR/MR. First, we introduced Chalktalk to participants who were unfamiliar with it to reduce the novelty effect. Afterwards, we gave a presentation on matrix transformations (a concept in the computer graphics curriculum, see figure~\ref{fig:expMatrix} and sidebar ~\ref{sidebar:matrix}) using our system in the mirrored face-to-face configuration. For each session, we have 1 presenter and 2 audience, all are placed physically remote. The presentation were repeated 4 times for 8 participants at all. 
 %\karl{To create a realistic presentation, we invited a computer graphics professor to present a lesson on matrices, and he permitted us to use his presentation as the basis for our experiment (see the rationale for our choice in topic and the steps in the presentation in sidebar ~\ref{sidebar:matrix}). }
 We ran the experience with Oculus Rift headsets. Upon the completion of all sessions, participants answered a questionnaire that gauged their opinions on one-to-one interaction~\cite{Lanir2008ClassroomPresentationSoftware}, eye contact~\cite{InsaPositionInClassroom} and focus shift~\cite{buxton1992telepresence} during the experience. Participants then joined a semi-structured exit interview. All factors were evaluated using the 7-pt Likert scale. The study was recorded with users' permission.
 
